--- a/Index.html
+++ b/Index.html
@@ -10,6 +10,7 @@
 </head>
 
 <header>
+    /*Barre de navigation*/
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">
             <img src="Asset/dice3.png" width="40" height="40" alt="">
