--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img src="Asset/dice3.png" width="40" height="40" alt="">
+            <img src="Asset/dice3.png" width="40" height="40" alt=""> AAG
         </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -33,15 +33,24 @@
       </nav>
 </header>
 <body>
-  
-    
+    <main>
+         <h1>Bienvenue à l'Association des Aventuriers Gastronomes (AAG)</h1>
+            <img src="Asset/dice3.png" width="200" height="200" alt="">
+        <article>
+            <h2>Qui sommes-nous ?</h2>
+            <p>L'Association des Aventuriers Gastronomes (AAG) est une organisation à but non lucratif qui combine les deux passions des jeux de rôles et de la nourriture. Notre objectif est de rassembler les amoureux de la gastronomie et du monde imaginaire pour vivre des aventures culinaires inoubliables.
+                <br>
+               L'AAG organise des événements uniques qui permettent aux membres de découvrir de nouveaux plats inspirés de différents univers de jeux de rôles. Nous proposons également des ateliers culinaires pour apprendre à préparer des recettes de fantasy et de science-fiction, ainsi que des parties de jeux de rôles où les repas sont intégrés dans le scénario.
+                <br>
+               L'association s'engage à promouvoir une alimentation saine et équilibrée tout en explorant les saveurs de différents mondes imaginaires. Nous offrons également des opportunités pour découvrir les traditions culinaires de différentes cultures à travers le monde. Rejoignez-nous pour une aventure gastronomique inoubliable !
+            </p>    
+        </article>
+    </main>
 
 
 
 
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
 
