--- a/Index.html
+++ b/Index.html
@@ -35,7 +35,7 @@
 <body>
     <main>
          <h1>Bienvenue à l'Association des Aventuriers Gastronomes (AAG)</h1>
-            <img src="Asset/dice3.png" width="200" height="200" alt="">
+            <img class="img01" src="Asset/dice3.png" width="200" height="200" alt="">
         <article>
             <h2>Qui sommes-nous ?</h2>
             <p>L'Association des Aventuriers Gastronomes (AAG) est une organisation à but non lucratif qui combine les deux passions des jeux de rôles et de la nourriture. Notre objectif est de rassembler les amoureux de la gastronomie et du monde imaginaire pour vivre des aventures culinaires inoubliables.
