--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
 
 <header>
    <!-- barre de navigation  -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary rounded-5" data-bs-theme="dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img src="Asset/dice3.png" width="40" height="40" alt=""> AAG
