--- a/Index.html
+++ b/Index.html
@@ -10,15 +10,15 @@
 </head>
 
 <header>
-   <!-- barre de navigation  -->
+    <!-- début de la barre de navigation  -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary rounded-5" data-bs-theme="dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            <img src="Asset/dice3.png" width="40" height="40" alt=""> AAG
-        </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="#">
+                <img src="Asset/dice3.png" width="40" height="40" alt=""> AAG
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-          </button>
+            </button>
           <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
             <ul class="navbar-nav  mb-2 mb-lg-0">
               <li class="nav-item">
@@ -30,11 +30,12 @@
             </ul>
           </div>
         </div>
-      </nav>
+    </nav>
+    <!-- fin de la barre de navigation  -->
 </header>
 <body>
     <main>
-         <h1>Bienvenue à l'Association des Aventuriers Gastronomes (AAG)</h1>
+        <h1>Bienvenue à l'Association des Aventuriers Gastronomes (AAG)</h1>
             <img class="img01" src="Asset/dice3.png" width="200" height="200" alt="">
         <article>
             <h2>Qui sommes-nous ?</h2>
@@ -46,12 +47,17 @@
             </p>    
         </article>
     </main>
-
-
-
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
+<footer class="bg-dark text-center text-white">
+     <!-- début du Copyright -->
+    <div class="text-center p-3 ">
+          © 2023 Copyright:
+          <a class="text-white" href="">Association des Aventuriers Gastronomes</a>
+    </div>
+    <!-- fin du Copyright -->
+</footer>
+        
 </html>
 
 
